# Durian

./: Package.swift  README.md
.github/workflows/: build-and-test.yml
Sources/: CMakeLists.txt
Sources/Durian/: AnyCombinator.swift  Apply.swift  Bind.swift  Choose.swift  ChooseN.swift  Combinator.swift  Combine.swift  Maybe.swift  OneOrMany.swift  PopFirst.swift  Recursive.swift  Transform.swift  TryCatch.swift  ZeroOrMany.swift
Tests/: CMakeLists.txt
Tests/DurianTests/: DurianTests.swift
